--- a/tema03/t03_01.md
+++ b/tema03/t03_01.md
@@ -418,6 +418,7 @@ Para evitar este inconveniente, Nunjucks (y muchos otros motores de plantillas) 
 
 Vamos a hacer un ejemplo con la aplicación de contactos "*PruebaContactosExpress_Web*". Creamos en la carpeta `views` una plantilla llamada `base.njk`, que va a tener el contenido general de cualquier vista de la aplicación: el encabezado (*head*) con los estilos y archivos JavaScript para la parte cliente, el menú de la aplicación, y el pie de página, si lo hay. Cada vista va a cambiar el título de página, y el contenido principal de dicha vista. Para dejar estas dos secciones abiertas y que se puedan modificar en cada vista se definen *bloques*, asociando a cada bloque un nombre. Así, nuestra plantilla `base.njk` puede quedar así:
 
+<!-- {% raw %} -->
 ```html
 <!doctype html>
 <html>
@@ -434,6 +435,7 @@ Vamos a hacer un ejemplo con la aplicación de contactos "*PruebaContactosExpres
     </body>
 </html>
 ```
+<!-- {% endraw %} -->
 
 Como podemos ver, con la estructura `block` definimos bloques de contenidos, asociados a un nombre, de forma que todo lo que queda fuera de esos bloques es fijo para todas las vistas que hereden de la plantilla.
 
