--- a/tema03/t03_01.md
+++ b/tema03/t03_01.md
@@ -441,6 +441,7 @@ Como podemos ver, con la estructura `block` definimos bloques de contenidos, aso
 
 Ahora, nuestra página de `contactos_listado.njk` sólo debe limitarse a heredar de esta plantilla, y definir el contenido de los dos bloques. Puede quedar así:
 
+<!-- {% raw %} -->
 ```html
 {% extends "base.njk" %}
 
@@ -458,9 +459,11 @@ Ahora, nuestra página de `contactos_listado.njk` sólo debe limitarse a heredar
 
 {% endblock %}
 ```
+<!-- {% endraw %} -->
 
 Del mismo modo, podríamos definir otras vistas, como por ejemplo la ficha de un contacto (`contacto_ficha.njk`):
 
+<!-- {% raw %} -->
 ```html
 {% extends "base.njk" %}
 
@@ -476,6 +479,7 @@ Del mismo modo, podríamos definir otras vistas, como por ejemplo la ficha de un
 
 {% endblock %}
 ```
+<!-- {% endraw %} -->
 
 #### 3.1.4.2. Inclusión de plantillas
 
@@ -515,6 +519,7 @@ Comenzaremos por el formulario para insertar contactos en nuestra aplicación de
 
 En primer lugar, crearemos una vista llamada `contactos_nuevo.njk` en nuestra carpeta de `views`. Esta vista, como las anteriores, heredará de `base.njk` y definirá el formulario en su bloque de contenido:
 
+<!-- {% raw %} -->
 ```html
 {% extends "base.njk" %}
 
@@ -547,6 +552,7 @@ En primer lugar, crearemos una vista llamada `contactos_nuevo.njk` en nuestra ca
 
 {% endblock %}
 ```
+<!-- {% endraw %} -->
 
 Para mostrar esta vista, habrá un enlace "Nuevo contacto" en el menú de navegación de la aplicación (vista `menu.njk`), que enviará a la ruta `/nuevo_contacto`:
 
