--- a/tema03/t03_01.md
+++ b/tema03/t03_01.md
@@ -330,6 +330,7 @@ router.get('/', (req, res) => {
 
 Finalmente, en la plantilla, podemos reemplazar el comentario que hemos dejado de "*Aquí mostraremos el listado*" con el listado efectivo, con este código:
 
+<!-- {% raw %} -->
 ```html
 <ul>
     {% for contacto in contactos %}
@@ -337,6 +338,7 @@ Finalmente, en la plantilla, podemos reemplazar el comentario que hemos dejado d
     {% endfor %}
 </ul>
 ```
+<!-- {% endraw %} -->
 
 Hemos empleado la cláusula `for` de Nunjucks para iterar sobre una colección de elementos (la colección `contactos` que recibimos del enrutador). Para cada elemento, mostramos un item de lista, y el nombre de cada contacto en él. Observad la notación de la doble llave `{{ ... }}` para mostrar información de los objetos con los que estamos trabajando (en este caso, cada contacto de la lista que recibimos del enrutador).
 
@@ -354,6 +356,7 @@ Se tiene disponible también una cláusula `if` para comprobar condiciones, y lo
 
 Por ejemplo, así podríamos mostrar el listado de contactos con estilos distintos para los items pares e impares, y con un mensaje personalizado si no hay elementos que mostrar.
 
+<!-- {% raw %} -->
 ```html
 <ul>
     {% for contacto in contactos %}
@@ -368,6 +371,7 @@ Por ejemplo, así podríamos mostrar el listado de contactos con estilos distint
     {% endfor %}
 </ul>
 ```
+<!-- {% endraw %} -->
 
 > **Ejercicios propuestos**:
 > 
@@ -487,9 +491,11 @@ Otra funcionalidad realmente útil que proporcionan muchos motores de plantillas
 
 Para incluir una vista o plantilla dentro de otra, emplearemos la instrucción `include`. Por ejemplo, si queremos incluir una vista con el menú de navegación de la web, podemos hacer esto, justo en el lugar donde queremos ubicar el menú:
 
+<!-- {% raw %} -->
 ```html
 {% include "menu.njk" %}
 ```
+<!-- {% endraw %} -->
 
 > **Ejercicios propuestos**:
 > 
