--- a/tema01/t01_02.md
+++ b/tema01/t01_02.md
@@ -9,23 +9,21 @@ En este apartado vamos a dar un breve repaso a algunos conceptos de Javascript q
 * Cómo gestiona Javascript el código asíncrono, mediante *callbacks*
 * Qué son y para qué se utilizan las promesas (*Promises*) en Javascript
 
-Conviene tener presente que algunas de estas opciones se han incorporado en las últimas versiones de Javascript (ECMAScript2015, también conocido como ES6), por lo que, en el caso de desarrollo en el lado del cliente o *frontend*, es posible que algunas versiones de navegadores no las soporten. Sin embargo, al estar desarrollando código del lado del servidor, no tenemos por qué preocuparnos por estas incompatibilidades.
-
 ### 1.2.1. Declaración de variables y constantes
 
 Para empezar, trataremos sobre la declaración de **variables**. La forma más típica que podemos encontrar en Internet para declarar variables en Javascript es mediante la palabra reservada `var`, que permite declarar variables de cualquier tipo. Por ejemplo:
 
 ```javascript
-var nombre = "Nacho";
+var nombre = "Mario";
 var edad = 41;
 ```
 
-Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito, porque la variable es válida dentro de la función donde se ha definido. Así, por ejemplo, este código funcionaría, y mostraría "Nacho" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
+Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito, porque la variable es válida dentro de la función donde se ha definido. Así, por ejemplo, este código funcionaría, y mostraría "Mario" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
 
 ```javascript
 if (2 > 1)
 {
-    var nombre = "Nacho";
+    var nombre = "Mario";
     console.log("Nombre dentro:", nombre);
 }
 console.log("Nombre fuera:", nombre);
@@ -36,7 +34,7 @@ Para evitar estas vulnerabilidades, emplearemos la palabra reservada `let`, en l
 ```javascript
 if (2 > 1)
 {
-    let nombre = "Nacho";
+    let nombre = "Mario";
     console.log("Nombre dentro:", nombre);
 }
 console.log("Nombre fuera:", nombre);
@@ -50,11 +48,9 @@ Recordemos también que podemos emplear la palabra `const` para definir **consta
 const pi = 3.1416;
 ```
 
-> **IMPORTANTE:** la inclusión de `let` y `const` tuvo lugar con la especificación ES6, también conocida como ECMAScript2015, por lo que durante estos primeros años es posible que algunos navegadores no lo soporten para desarrollar *frontends*. 
-
 ### 1.2.2. Funciones y *arrow functions*
 
-Veamos ahora las diferentes formas de definir funciones o métodos que existen en Javascript, y con ello, introduciremos un concepto que se ha vuelto muy habitual con ES6, y que utilizaremos a menudo en estos apuntes. Se trata de una notación alternativa para definir métodos o funciones, las llamadas *arrow functions* (funciones flecha).
+Veamos ahora las diferentes formas de definir funciones o métodos que existen en Javascript, y con ello, introduciremos un concepto que se ha vuelto muy habitual, y que utilizaremos a menudo en estos apuntes. Se trata de una notación alternativa para definir métodos o funciones, las llamadas *arrow functions* (funciones flecha).
 
 #### 1.2.2.1. Las funciones tradicionales
 
@@ -116,10 +112,10 @@ Como comentábamos antes, las *arrow functions*, así como las funciones anónim
 
 ```javascript
 let datos = [
-    {nombre: "Nacho", telefono: "966112233", edad: 41},
-    {nombre: "Ana", telefono: "911223344", edad: 36},
-    {nombre: "Mario", telefono: "611998877", edad: 15},
-    {nombre: "Laura", telefono: "633663366", edad: 17}
+    {nombre: "May", telefono: "966112233", edad: 41},
+    {nombre: "Nacho", telefono: "911223344", edad: 43},
+    {nombre: "Mario", telefono: "611998877", edad: 19},
+    {nombre: "Laura", telefono: "633663366", edad: 13}
 ];
 ```
 
@@ -145,18 +141,16 @@ Notar que, en estos casos, no asignamos la función a una variable para usarla m
 
 La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this`, o al elemento `arguments`, que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso.
 
-> **IMPORTANTE:** las *arrow functions* también forman parte de la especificación ES6, y por tanto algunos navegadores pueden no admitirlas aún en desarrollos en la parte cliente. 
-
 > **Ejercicios propuestos:**
 > 
 > **1.** Crea una carpeta llamada "**T1_ArrowFunctions**" en tu espacio de trabajo, en la carpeta de "*Ejercicios*". Crea un archivo fuente dentro llamado `arrow_functions.js` con el siguiente código:
 
 ```javascript
 let datos = [
-    {nombre: "Nacho", telefono: "966112233", edad: 41},
-    {nombre: "Ana", telefono: "911223344", edad: 36},
-    {nombre: "Mario", telefono: "611998877", edad: 15},
-    {nombre: "Laura", telefono: "633663366", edad: 17}
+    {nombre: "May", telefono: "966112233", edad: 41},
+    {nombre: "Nacho", telefono: "911223344", edad: 43},
+    {nombre: "Mario", telefono: "611998877", edad: 19},
+    {nombre: "Laura", telefono: "633663366", edad: 13}
 ];
 
 nuevaPersona({nombre: "Juan", telefono:"965661564", edad: 60});
