--- a/tema01/t01_02.md
+++ b/tema01/t01_02.md
@@ -139,7 +139,7 @@ Notar que, en estos casos, no asignamos la función a una variable para usarla m
 
 #### 1.2.2.4. *Arrow functions* y funciones tradicionales
 
-La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this`, o al elemento `arguments`, que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso.
+La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (elemento de la página que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. Recordad que el elemento this hace referencia al elemento de la página que ha invocado a la función en la que estamos.
 
 > **Ejercicios propuestos:**
 > 
