t01_01 concepto de objeto

--- a/tema01/t01_02.md
+++ b/tema01/t01_02.md
@@ -48,6 +48,10 @@ Recordemos también que podemos emplear la palabra `const` para definir **consta
 const pi = 3.1416;
 ```
 
+### Objetos
+
+Antes de tratar aspectos más avanzados, conviene recordar qué son los objetos en JavaScript, cómo se crean y se accede a sus propiedades. 
+
 ### 1.2.2. Funciones y *arrow functions*
 
 Veamos ahora las diferentes formas de definir funciones o métodos que existen en Javascript, y con ello, introduciremos un concepto que se ha vuelto muy habitual, y que utilizaremos a menudo en estos apuntes. Se trata de una notación alternativa para definir métodos o funciones, las llamadas *arrow functions* (funciones flecha).
@@ -139,7 +143,7 @@ Notar que, en estos casos, no asignamos la función a una variable para usarla m
 
 #### 1.2.2.4. *Arrow functions* y funciones tradicionales
 
-La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (elemento de la página que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. Recordad que el elemento this hace referencia al elemento de la página que ha invocado a la función en la que estamos.
+La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (recuerda que *this* hace referencia al elemento de la página que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. 
 
 > **Ejercicios propuestos:**
 > 
