--- a/tema01/t01_02.md
+++ b/tema01/t01_02.md
@@ -5,6 +5,7 @@
 En este apartado vamos a dar un breve repaso a algunos conceptos de Javascript que utilizaremos a lo largo del curso, y con los que conviene que nos empecemos a familiarizar desde ya, si no los hemos utilizado aún. En concreto, trataremos:
 
 * Nuevas formas de definir variables y constantes
+* Manipulación de estructuras heterogéneas de datos
 * El uso de "funciones flecha" (*arrow functions*), también conocidas como "expresiones lambda", como alternativa a la definición clásica de funciones, o al uso de funciones anónimas.
 * Cómo gestiona Javascript el código asíncrono, mediante *callbacks*
 * Qué son y para qué se utilizan las promesas (*Promises*) en Javascript
@@ -14,16 +15,16 @@ En este apartado vamos a dar un breve repaso a algunos conceptos de Javascript q
 Para empezar, trataremos sobre la declaración de **variables**. La forma más típica que podemos encontrar en Internet para declarar variables en Javascript es mediante la palabra reservada `var`, que permite declarar variables de cualquier tipo. Por ejemplo:
 
 ```javascript
-var nombre = "Mario";
+var nombre = "Maria";
 var edad = 41;
 ```
 
-Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito, porque la variable es válida dentro de la función donde se ha definido. Así, por ejemplo, este código funcionaría, y mostraría "Mario" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
+Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito, porque la variable es válida dentro de la función donde se ha definido. Así, por ejemplo, este código funcionaría, y mostraría "Maria" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
 
 ```javascript
 if (2 > 1)
 {
-    var nombre = "Mario";
+    var nombre = "Maria";
     console.log("Nombre dentro:", nombre);
 }
 console.log("Nombre fuera:", nombre);
@@ -34,7 +35,7 @@ Para evitar estas vulnerabilidades, emplearemos la palabra reservada `let`, en l
 ```javascript
 if (2 > 1)
 {
-    let nombre = "Mario";
+    let nombre = "Maria";
     console.log("Nombre dentro:", nombre);
 }
 console.log("Nombre fuera:", nombre);
@@ -48,15 +49,66 @@ Recordemos también que podemos emplear la palabra `const` para definir **consta
 const pi = 3.1416;
 ```
 
-### Objetos
+### 1.2.2. Estructuras heterogéneas de datos
 
-Antes de tratar aspectos más avanzados, conviene recordar qué son los objetos en JavaScript, cómo se crean y se accede a sus propiedades. 
+Las estructuras de datos u objetos literales en Javascript son colecciones dinámicas de pares propiedad-valor, donde la propiedad siempre es una cadena y el valor puede ser un tipo de dato básico, un objeto o incluso una función. Por ejemplo:
 
-### 1.2.2. Funciones y *arrow functions*
+```javascript
+let persona = {
+    nombre: "Maria"
+    edad: 41
+    telefono: "666555444"
+}
+```
+
+Podemos acceder a una propiedad usando el punto `.` o la notación cuadrada `[ ]`:
+
+```javascript
+let nombre = persona.nombre;
+// Maria
+```
+
+O bien: 
+
+```javascript
+let nombre = persona["nombre"];
+// Maria
+```
+
+A continuación se muestra otro ejemplo donde el valor de una propiedad es otro objeto:
+
+```javascript
+let persona = {
+    nombre: "Maria",
+    edad: 41, 
+    telefono: "666555444",
+    direccion: {
+        via: "Avenida", 
+        nombre: "Miguel Hernández",
+        numero: 62
+    }
+}
+```
+
+El valor de la propiedad `direccion` es un nuevo objeto. Para acceder al valor de alguna propiedad de dicho objeto haremos lo siguiente: 
+
+```javascript
+let via = persona.direccion.via;
+// Avenida
+```
+
+O bien:
+
+```javascript
+let via = persona["direccion"]["via"];
+// Avenida
+```
+
+### 1.2.3. Funciones y *arrow functions*
 
 Veamos ahora las diferentes formas de definir funciones o métodos que existen en Javascript, y con ello, introduciremos un concepto que se ha vuelto muy habitual, y que utilizaremos a menudo en estos apuntes. Se trata de una notación alternativa para definir métodos o funciones, las llamadas *arrow functions* (funciones flecha).
 
-#### 1.2.2.1. Las funciones tradicionales
+#### 1.2.3.1. Las funciones tradicionales
 
 Comencemos por un ejemplo sencillo. Supongamos esta función tradicional que devuelve la suma de los dos parámetros que se le pasan:
 
@@ -72,7 +124,7 @@ A la hora de utilizar esta función, basta con llamarla en el lugar deseado, pas
 console.log(sumar(3, 2)); // Mostrará 5
 ```
 
-#### 1.2.2.2. Las funciones anónimas
+#### 1.2.3.2. Las funciones anónimas
 
 Esta misma función también podríamos expresarla como una función anónima. Estas funciones se declaran "sobre la marcha", y se suelen asignar a una variable para poderlas nombrar o llamar después:
 
@@ -83,7 +135,7 @@ let sumarAnonimo = function(num1, num2) {
 console.log(sumarAnonimo(3, 2));
 ```
 
-#### 1.2.2.3. Las *arrow functions*
+#### 1.2.3.3. Las *arrow functions*
 
 Las "funciones flecha" o *arrow functions* definen una forma de definir funciones que emplea una expresión lambda para especificar los parámetros por un lado (entre paréntesis) y el código de la función por otro entre llaves, separados por una flecha. Se prescinde de la palabra reservada `function` para definirlas. 
 
@@ -141,7 +193,7 @@ console.log(mayoresDeEdad);
 
 Notar que, en estos casos, no asignamos la función a una variable para usarla más tarde, sino que se emplean en el mismo punto donde se definen. Notar también que el código queda más compacto empleando una *arrow function*.
 
-#### 1.2.2.4. *Arrow functions* y funciones tradicionales
+#### 1.2.3.4. *Arrow functions* y funciones tradicionales
 
 La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (recuerda que *this* hace referencia al elemento de la página que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. 
 
@@ -177,7 +229,7 @@ datos.push(persona);
 datos = datos.filter(persona => persona.telefono != telefonoABuscar);
 ```
 
-### 1.2.3. Los *callbacks*
+### 1.2.4. Los *callbacks*
 
 Uno de los dos pilares en los que se sustenta la programación asíncrona en Javascript lo conforman los *callbacks*. Un *callback* es una función A que se pasa como parámetro a otra B, y que será llamada en algún momento durante la ejecución de B (normalmente cuando B finaliza su tarea). Este concepto es fundamental para dotar a Node.js (y a Javascript en general) de un comportamiento asíncrono: se llama a una función, y se le deja indicado lo que tiene que hacer cuando termine, y mientras tanto el programa puede dedicarse a otras cosas.
 
@@ -193,12 +245,12 @@ Si ejecutamos el ejemplo, veremos que el primer mensaje que aparece es el de “
 
 Utilizaremos *callbacks* ampliamente durante este curso. De forma especial para procesar el resultado de algunas promesas que emplearemos (ahora veremos qué son las promesas), o el tratamiento de algunas peticiones de servicios.
 
-### 1.2.4. Las promesas
+### 1.2.5. Las promesas
 
 Las promesas son otro mecanismo importante para dotar de asincronía a Javascript. Se emplean para definir la finalización (exitosa o no) de una operación asíncrona. En nuestro código, podemos definir promesas para realizar operaciones asíncronas, o bien (más habitual) utilizar las promesas definidas por otros en el uso de sus librerías.
 A lo largo de este curso utilizaremos promesas para, por ejemplo, enviar operaciones a una base de datos y recoger el resultado de las mismas cuando finalicen, sin bloquear el programa principal. Pero para entender mejor qué es lo que haremos, llegado el momento, conviene tener clara la estructura de una promesa y las posibles respuestas que ofrece.
 
-#### 1.2.4.1. Crear una promesa. Elementos a tener en cuenta
+#### 1.2.5.1. Crear una promesa. Elementos a tener en cuenta
 
 En el caso de que queramos o necesitemos crear una promesa, se creará un objeto de tipo `Promise`. A dicho objeto se le pasa como parámetro una función con dos parámetros:
 
@@ -252,7 +304,7 @@ let promesaMayoresDeEdad = listado => {
 
 Así no hacemos uso de variables globales, y el array queda pasado como parámetro a la propia función, que devuelve el objeto `Promise` una vez concluya. Deja definida la promesa de esta segunda forma en el archivo fuente de prueba.
 
-#### 1.2.4.2. Consumo de promesas
+#### 1.2.5.2. Consumo de promesas
 
 En el caso de querer utilizar una promesa previamente definida (o creada por otros en alguna librería), simplemente llamaremos a la función u objeto que desencadena la promesa, y recogemos el resultado. En este caso:
 
@@ -289,7 +341,7 @@ Notar que, al definir la promesa, se define también la estructura que tendrá e
 >
 > Modifica el código del programa principal para que intente añadir una persona correcta y otra equivocada (teléfono ya existente en el vector), y borrar una persona correcta y otra equivocada (teléfono no existente en el vector). Comprueba que el resultado al ejecutar es el que esperabas.
 
-#### 1.2.4.3. La especificación async/await
+#### 1.2.5.3. La especificación async/await
 
 Desde ECMAScript7 se tiene disponible una nueva forma de trabajar con promesas, a través de la especificación **async/await**. Es una forma más cómoda de llamar a funciones asíncronas y recoger su resultado antes de llamar a otra, sin necesidad de ir anidando cláusulas `then` para enlazar el resultado de una promesa con la siguiente.
 
