--- a/tema01/t01_02.md
+++ b/tema01/t01_02.md
@@ -1,5 +1,19 @@
 # Tema 1. Introducción a Node.js y Express.js
 
+1.2. Algunos conceptos de JavaScript
+1.2.1. Declaración de variables y constantes
+1.2.2. Estructuras heterogéneas de datos
+1.2.3. Funciones y arrow functions
+1.2.3.1. Funciones tradicionales
+1.2.3.2. Funciones anónimas
+1.2.3.3. Arrow functions
+1.2.3.4. Arrow functions vs funciones tradicionales y anónimas
+1.2.4. Los callbacks
+1.2.5. Las promesas
+1.2.5.1. Crear una promesa. Elementos a tener en cuenta
+1.2.5.2. Consumo de promesas
+1.2.5.3. La especificación async/await
+
 ## 1.2. Algunos conceptos de JavaScript
 
 En este apartado vamos a dar un breve repaso a algunos conceptos de Javascript que utilizaremos a lo largo del curso, y con los que conviene que nos empecemos a familiarizar desde ya, si no los hemos utilizado aún. En concreto, trataremos:
@@ -19,7 +33,7 @@ var nombre = "Maria";
 var edad = 41;
 ```
 
-Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito, porque la variable es válida dentro de la función donde se ha definido. Así, por ejemplo, este código funcionaría, y mostraría "Maria" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
+Sin embargo, esta forma de declarar variables tiene algunos inconvenientes, como por ejemplo, y sobre todo, el hecho de declarar una variable de forma local a un ámbito, y que pueda ser utilizada desde fuera de ese ámbito. Así, por ejemplo, este código funcionaría, y mostraría "Maria" como nombre en ambos casos, a pesar de que, intuitivamente, la variable `nombre` no debería existir fuera del if:
 
 ```javascript
 if (2 > 1)
@@ -175,7 +189,7 @@ let datos = [
 ];
 ```
 
-Si queremos filtrar las personas mayores de edad, podemos hacerlo con una función anónima combinada con la función `filter`:
+Si queremos filtrar las personas mayores de edad, podemos hacerlo con una función anónima combinada con la función `filter`. La función filter obtiene como resultado un array con los elementos que cumplen la condición indicada por la función que se pasa como parámetro:
 
 ```javascript
 let mayoresDeEdad = datos.filter(function(persona) {
@@ -193,9 +207,9 @@ console.log(mayoresDeEdad);
 
 Notar que, en estos casos, no asignamos la función a una variable para usarla más tarde, sino que se emplean en el mismo punto donde se definen. Notar también que el código queda más compacto empleando una *arrow function*.
 
-#### 1.2.3.4. *Arrow functions* y funciones tradicionales
+#### 1.2.3.4. *Arrow functions* vs funciones tradicionales y anónimas
 
-La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (recuerda que *this* hace referencia al elemento de la página que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. 
+La diferencia entre las *arrow functions* y la nomenclatura tradicional o las funciones anónimas es que con las *arrow functions* no podemos acceder al elemento `this` (recuerda que *this* hace referencia al elemento que ha invocado a la función en la que estamos), o al elemento `arguments` (objeto que contiene un array con los argumentos utilizados cuando se invoca a una función), que sí están disponibles con las funciones anónimas o tradicionales. Así que, en caso de necesitar hacerlo, deberemos optar por una función normal o anónima, en este caso. 
 
 > **Ejercicios propuestos:**
 > 
