--- a/tema01/t01_04.md
+++ b/tema01/t01_04.md
@@ -338,19 +338,19 @@ Al final de todo el proceso, tendremos el archivo en la carpeta de nuestro proye
 Para instalar un módulo externo en un proyecto determinado, debemos abrir un terminal y situarnos en la carpeta del proyecto. Después, escribimos el siguiente comando:
 
 ```
-npm install --save nombre_modulo
+npm install nombre_modulo
 ```
 
 donde *nombre_modulo* será el nombre del módulo que queramos instalar. Podemos instalar también una versión específica del módulo añadiéndolo como sufijo con una arroba al nombre del módulo. Por ejemplo:
 
 ```
-npm install --save nombre_modulo@1.1.0
+npm install nombre_modulo@1.1.0
 ```
 
 Vamos a probar con un módulo sencillo y muy utilizado (tiene millones de descargas semanalmente), ya que contiene una serie de utilidades para facilitarnos el desarrollo de nuestros proyectos. Se trata del módulo `lodash`, que podéis consultar en la web citada anteriormente ([aquí](https://www.npmjs.com/package/lodash)). Para instalarlo, escribimos lo siguiente:
 
 ```
-npm install --save lodash
+npm install lodash
 ```
 
 Algunas puntualizaciones antes de seguir:
@@ -361,7 +361,7 @@ Algunas puntualizaciones antes de seguir:
     <img src="../img/t01_node_modules.png" width="40%" />
 </div>
 
-* El flag `--save` sirve para que, además de descargar el módulo, se modifique el archivo `package.json` de configuración con el nuevo módulo incluido en el bloque de dependencias. Este parámetro ya no es necesario incluirlo en versiones recientes del comando *npm*, pero se deja comentado por si utilizamos versiones anteriores.
+* También tras ejecutar el comando anterior, se habrá añadido el módulo en una sección llamada dependencies dentro del archivo package.json.
 
 ```json
 {
@@ -413,10 +413,10 @@ Nacho,Ana,Mario,Laura
 Para desinstalar un módulo (y eliminarlo del archivo `package.json`, si existe), escribimos el comando siguiente:
 
 ```
-npm uninstall --save nombre_modulo
+npm uninstall nombre_modulo
 ```
 
-Nuevamente, el flag `--save` se emplea para actualizar los cambios en el archivo `package.json`, y en las últimas versiones de npm no es necesario especificarlo.
+Tras este paso, el módulo se elimina tanto de la carpeta `node_modules` como de la sección dependencies del archivo `package.json`.
 
 #### 1.4.4.2. Algunas consideraciones sobre módulos de terceros
 
@@ -458,7 +458,7 @@ Para poder determinar qué versiones o rangos de versiones son compatibles con n
 Existen otros modificadores también, pero con éstos podemos hacernos una idea de lo que podemos controlar. Una vez hayamos especificado los rangos de versiones compatibles de cada módulo, con el siguiente comando actualizamos los paquetes que se vean afectados por estas restricciones, dejando para cada uno una versión dentro del rango compatible indicado:
 
 ```
-npm update --save
+npm update 
 ```
 
 **Añadir módulos a mano en "package.json"**
