t01_05 actualizado Thunder Client

--- a/tema01/t01_05.md
+++ b/tema01/t01_05.md
@@ -336,9 +336,11 @@ app.get('/contactos', (req, res) => {
 });
 ```
 
-### 1.5.3. Uso de Postman para probar servicios
+### 1.5.3. Herramientas para probar los servicios
 
-Ya hemos visto que probar unos servicios de listado (GET) es sencillo a través de un navegador. Sin embargo, pronto aprenderemos a hacer otros servicios (inserciones, modificaciones y borrados) que no son tan sencillos de probar con esta herramienta. Así que conviene ir entrando en contacto con otra más potente, que nos permita probar todos los servicios que vamos a desarrollar. Esa herramienta es Postman.
+Ya hemos visto que probar unos servicios de listado (GET) es sencillo a través de un navegador. Sin embargo, pronto aprenderemos a hacer otros servicios (inserciones, modificaciones y borrados) que no son tan sencillos de probar con esta herramienta. Así que conviene ir entrando en contacto con otras más potentes, que nos permita probar todos los servicios que vamos a desarrollar. Existen varias alternativas al respecto, como por ejemplo **Postman**. Si queremos evitar depender de más aplicaciones externas, podemos utilizar la extensión **ThunderClient** de *Visual Studio Code*. 
+
+#### 1.5.3.1 Uso de Postman
 
 Postman es una aplicación gratuita y multiplataforma que permite enviar todo tipo de peticiones de clientes a un servidor determinado, y examinar la respuesta que éste produce. De esta forma, podemos comprobar que los servicios ofrecen la información adecuada antes de ser usados por una aplicación cliente real.
 
@@ -364,7 +366,7 @@ Desde el botón "New" en la esquina superior izquierda podemos crear nuevas peti
     <img src="../img/t01_postman_request.png" width="90%" />
 </div>
 
-#### 1.5.3.1. Añadir peticiones GET
+ **Añadir peticiones GET** 
 
 Para añadir una petición, habitualmente elegiremos el tipo de comando bajo las pestañas (GET, POST, PUT, DELETE) y la URL asociada a dicho comando. Por ejemplo:
 
@@ -402,7 +404,7 @@ Bastaría con reemplazar el teléfono de la URL por el que queramos consultar re
     <img src="../img/t01_postman_request7.png" width="60%" />
 </div>
 
-#### 1.5.3.2. Exportar/Importar colecciones
+ **Exportar/Importar colecciones**
 
 Podemos exportar e importar nuestras colecciones en Postman, de forma que podemos llevarlas de un equipo a otro. Para **exportar** una colección, hacemos clic en el botón de puntos suspensivos (...) que hay junto a ella en el panel izquierdo, y elegimos Export.
 
@@ -426,3 +428,74 @@ Si queremos **importar** una colección previamente exportada, podemos hacer cli
 > * Otra llamada **GET /libros/id** que conecte con la URI `/libros/:id` y obtenga el libro cuyo *id* se especifique, o el mensaje "Libro no encontrado" si es un *id* incorrecto.
 > 
 > Cuando pruebes el funcionamiento de ambas peticiones, exporta la colección a un archivo con el nombre por defecto que te proponga Postman (será algo así como *LibrosJSON.postman_collection.json*).
+
+#### 1.5.3.2 Uso de ThunderClient de Visual Studio Code
+
+Esta herramienta sirve, al igual que Postman, para simular peticiones a servidores web, y recoger y analizar la respuesta. La buscamos en el panel de extensiones y la instalamos:
+
+<div align="center">
+    <img src="../img/t01_thunderclient.png" width="90%" />
+</div>
+
+Para utilizar esta extensión deberemos seleccionar su icono asociado en la barra izquierda:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_icon.png" width="90%" />
+</div>
+
+Es aconsejable que nuestras peticiones las agrupemos en colecciones (*collections*) de forma que cada colección se centre en un proyecto o aplicación concreta. Para ello vamos a la pestaña de colecciones y elegimos crear una, con el nombre que queramos (por ejemplo, Contactos)
+
+<div align="center">
+    <img src="../img/t01_thunderclient_collections.png" width="90%" />
+</div>
+
+Desde el botón de puntos suspensivos junto al nombre de la colección podremos añadir nuevas peticiones asociadas a dicha colección (*New Request*), y después le pondremos un nombre.
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request.png" width="90%" />
+</div>
+
+**Añadir peticiones GET**
+
+Para añadir una petición GET, podemos en primer lugar identificarla con su nombre (por ejemplo, *GET /contactos*), y en el panel que se abrirá definimos la URL de acceso (también podemos elegir el tipo de comando: GET, POST, etc). Por ejemplo:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request_get.png" width="90%" />
+</div>
+
+Si pulsamos en el botón de Send, podemos ver la respuesta emitida por el servidor en el panel de respuesta:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_response.png" width="90%" />
+</div>
+
+Siguiendo estos mismos pasos, podemos también crear una nueva petición para obtener un contacto a partir de su id, por GET:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request_get2.png" width="90%" />
+</div>
+
+Bastaría con reemplazar el id de la URL por el que queramos consultar realmente.
+
+**Exportar/Importar colecciones**
+
+Podemos exportar e importar nuestras colecciones en *ThunderClient*, de forma que podemos llevarlas de un equipo a otro. Para **exportar** una colección, hacemos clic en el botón de puntos suspensivos (…) que hay junto a ella en el panel izquierdo, y elegimos *Export*.
+
+<div align="center">
+    <img src="../img/t01_thunderclient_request.png" width="90%" />
+</div>
+
+Si queremos **importar** una colección previamente exportada, podemos hacer clic en el botón para crear colecciones, y elegimos la opción *Import*:
+
+<div align="center">
+    <img src="../img/t01_thunderclient_collections.png" width="90%" />
+</div>
+
+En cualquiera de los dos casos, las colecciones se exportan/importan a/desde un archivo en formato JSON que contiene la información de cada petición.
+
+> **Ejercicios propuestos**:
+> 
+> **4.** Crea una nueva colección en **ThunderClient** llamada **LibrosJSON**, y define dentro dos peticiones (*requests*):
+> 
+> * Una llamada **GET /libros** que conecte con la URI `/libros`, y obtenga por tanto el listado de todos los libros.
+> * Otra llamada **GET /libros/id** que conecte con la URI `/libros/:id` y obtenga el libro cuyo *id* se especifique, o el mensaje "Libro no encontrado" si es un *id* incorrecto.
